--- a/notes-frontend/index.html
+++ b/notes-frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NotesFrontend</title>
-  <base href="https://botarvlad.github.io/notesApp/">
+  <base href="/notes-frontend/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/678dee23ac.js" crossorigin="anonymous"></script>
